[BugFix] Fix low-cardinality rewrite NPE caused by shared DecodeInfo
Signed-off-by: stephen <stephen5217@163.com>