@@ -105,7 +105,10 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
         }
         context.initRewriteExpressions();
         // check output need decode
-        DecodeInfo decodeInfo = context.operatorDecodeInfo.getOrDefault(optExpression.getOp(), DecodeInfo.EMPTY);
+        DecodeInfo decodeInfo = context.operatorDecodeInfo.get(optExpression.getOp());
+        if (decodeInfo == null) {
+            decodeInfo = DecodeInfo.empty();
+        }
         // compute the fragment used dict expr
         optExpression = rewriteImpl(optExpression, new ColumnRefSet());
         if (!decodeInfo.outputStringColumns.isEmpty()) {
@@ -120,7 +123,10 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
     // compute which expressions & dict should save in the fragment
     private OptExpression rewriteImpl(OptExpression optExpression, ColumnRefSet fragmentUsedDictExprs) {
         // should get DecodeInfo before rewrite operator
-        DecodeInfo decodeInfo = context.operatorDecodeInfo.getOrDefault(optExpression.getOp(), DecodeInfo.EMPTY);
+        DecodeInfo decodeInfo = context.operatorDecodeInfo.get(optExpression.getOp());
+        if (decodeInfo == null) {
+            decodeInfo = DecodeInfo.empty();
+        }
 
         fragmentUsedDictExprs.union(decodeInfo.outputStringColumns);
         fragmentUsedDictExprs.union(decodeInfo.usedStringColumns);
@@ -130,7 +136,10 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
         for (int i = 0; i < optExpression.arity(); i++) {
             OptExpression child = optExpression.inputAt(i);
 
-            DecodeInfo childDecodeInfo = context.operatorDecodeInfo.getOrDefault(child.getOp(), DecodeInfo.EMPTY);
+            DecodeInfo childDecodeInfo = context.operatorDecodeInfo.get(child.getOp());
+            if (childDecodeInfo == null) {
+                childDecodeInfo = DecodeInfo.empty();
+            }
             child = rewriteImpl(child, childFragmentUsedDictExpr.clone());
             if (decodeInfo.decodeStringColumns.isIntersect(childDecodeInfo.outputStringColumns)) {
                 // if child's output dict column required decode, insert decode node
@@ -225,7 +234,10 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
     @Override
     public OptExpression visit(OptExpression optExpression, ColumnRefSet fragmentUseDictExprs) {
         PhysicalOperator op = optExpression.getOp().cast();
-        DecodeInfo info = context.operatorDecodeInfo.getOrDefault(op, DecodeInfo.EMPTY);
+        DecodeInfo info = context.operatorDecodeInfo.get(op);
+        if (info == null) {
+            info = DecodeInfo.empty();
+        }
         op.setPredicate(rewritePredicate(op.getPredicate(), info.inputStringColumns));
         op.setProjection(rewriteProjection(op.getProjection(), info.inputStringColumns));
         return rewriteOptExpression(optExpression, op, info.outputStringColumns);
@@ -248,7 +260,10 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
         }
 
         PhysicalHashJoinOperator join = optExpression.getOp().cast();
-        DecodeInfo info = context.operatorDecodeInfo.getOrDefault(join, DecodeInfo.EMPTY);
+        DecodeInfo info = context.operatorDecodeInfo.get(join);
+        if (info == null) {
+            info = DecodeInfo.empty();
+        }
 
         ScalarOperator newOnPredicate = rewriteJoinOnPredicate(join.getOnPredicate(), info.inputStringColumns);
         ScalarOperator newPredicate = rewritePredicate(join.getPredicate(), info.inputStringColumns);
@@ -265,7 +280,11 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
     @Override
     public OptExpression visitPhysicalUnion(OptExpression optExpression, ColumnRefSet fragmentUseDictExprs) {
         PhysicalUnionOperator unionOp = optExpression.getOp().cast();
-        DecodeInfo info = context.operatorDecodeInfo.getOrDefault(unionOp, DecodeInfo.EMPTY);
+        DecodeInfo info = context.operatorDecodeInfo.get(unionOp);
+        if (info == null) {
+            info = DecodeInfo.empty();
+        }
+        final DecodeInfo finalInfo = info;
         List<Map<ColumnRefOperator, ConstantOperator>> constantMappings =
                 context.unionDictionaryManager.generateConstantEncodingMap(
                         unionOp.getOutputColumnRefOp(), unionOp.getChildOutputColumns(), context.allStringColumns);
@@ -276,7 +295,8 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
             constantMapping.forEach((key, value) ->
                     columnMapping.put(key, factory.create(value, value.getType(), value.isNullable())));
             unionOp.getChildOutputColumns().get(i).forEach(c -> columnMapping.putIfAbsent(c,
-                    info.inputStringColumns.contains(c.getId()) ? context.stringRefToDictRefMap.getOrDefault(c, c) : c)
+                    finalInfo.inputStringColumns.contains(c.getId()) ?
+                            context.stringRefToDictRefMap.getOrDefault(c, c) : c)
             );
             newChildOutputColumns.add(unionOp.getChildOutputColumns().get(i).stream().map(columnMapping::get).toList());
             if (constantMapping.isEmpty()) {
@@ -299,7 +319,7 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
                         ? context.stringRefToDictRefMap.get(c) : c).toList();
 
         ColumnRefSet inputColumns = new ColumnRefSet();
-        inputColumns.union(info.inputStringColumns);
+        inputColumns.union(finalInfo.inputStringColumns);
         unionOp.getOutputColumnRefOp().stream().map(ColumnRefOperator::getId).filter(context.allStringColumns::contains)
                 .forEach(inputColumns::union);
         ScalarOperator newPredicate = rewritePredicate(unionOp.getPredicate(), inputColumns);
@@ -308,7 +328,7 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
         PhysicalUnionOperator newUnionOp = new PhysicalUnionOperator(newColumnRefOp, newChildOutputColumns,
                 unionOp.isUnionAll(), unionOp.getLimit(), newPredicate, newProjection,
                 unionOp.isFromIcebergEqualityDeleteRewrite());
-        return rewriteOptExpression(optExpression, newUnionOp, info.outputStringColumns);
+        return rewriteOptExpression(optExpression, newUnionOp, finalInfo.outputStringColumns);
     }
 
 
@@ -316,7 +336,10 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
     public OptExpression visitPhysicalHashAggregate(OptExpression optExpression, ColumnRefSet fragmentUseDictExprs) {
         // rewrite multi-stage aggregate
         PhysicalHashAggregateOperator aggregate = optExpression.getOp().cast();
-        DecodeInfo info = context.operatorDecodeInfo.getOrDefault(aggregate, DecodeInfo.EMPTY);
+        DecodeInfo info = context.operatorDecodeInfo.get(aggregate);
+        if (info == null) {
+            info = DecodeInfo.empty();
+        }
         ColumnRefSet inputStringRefs = new ColumnRefSet();
         inputStringRefs.union(info.inputStringColumns);
 
@@ -364,7 +387,10 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
     @Override
     public OptExpression visitPhysicalAnalytic(OptExpression optExpression, ColumnRefSet fragmentUseDictExprs) {
         PhysicalWindowOperator windowOp = optExpression.getOp().cast();
-        DecodeInfo info = context.operatorDecodeInfo.getOrDefault(windowOp, DecodeInfo.EMPTY);
+        DecodeInfo info = context.operatorDecodeInfo.get(windowOp);
+        if (info == null) {
+            info = DecodeInfo.empty();
+        }
         ColumnRefSet inputStringRefs = new ColumnRefSet();
         inputStringRefs.union(info.inputStringColumns);
 
@@ -464,11 +490,10 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
         exchange.setGlobalDicts(dicts);
         exchange.setGlobalDictsExpr(computeDictExpr(fragmentUseDictExprs));
 
-        if (!(exchange.getDistributionSpec() instanceof HashDistributionSpec)) {
+        if (!(exchange.getDistributionSpec() instanceof HashDistributionSpec spec)) {
             return rewriteOptExpression(optExpression, exchange, info.outputStringColumns);
         }
 
-        HashDistributionSpec spec = (HashDistributionSpec) exchange.getDistributionSpec();
         List<DistributionCol> shuffledColumns = Lists.newArrayList();
         for (DistributionCol column : spec.getHashDistributionDesc().getDistributionCols()) {
             if (!info.outputStringColumns.contains(column.getColId())) {
@@ -566,9 +591,12 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
                 fnOutputs.set(i, output);
                 fragmentUseDictExprs.union(input);
             }
-            function = (TableFunction) ExprUtils.getBuiltinFunction(FunctionSet.UNNEST,
-                    fnInputs.stream().map(ScalarOperator::getType).toArray(Type[]::new), function.getArgNames(),
-                    Function.CompareMode.IS_NONSTRICT_SUPERTYPE_OF);
+            Type[] argTypes = new Type[fnInputs.size()];
+            for (int j = 0; j < fnInputs.size(); j++) {
+                argTypes[j] = fnInputs.get(j).getType();
+            }
+            function = (TableFunction) ExprUtils.getBuiltinFunction(
+                    FunctionSet.UNNEST, argTypes, function.getArgNames(), Function.CompareMode.IS_NONSTRICT_SUPERTYPE_OF);
             function.setIsLeftJoin(tableFunc.getFn().isLeftJoin());
         }
 
@@ -683,15 +711,15 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
         newPredicates.getNoEvalPartitionConjuncts().clear();
         newPredicates.getNoEvalPartitionConjuncts().addAll(
                 predicates.getNoEvalPartitionConjuncts().stream().map(x -> rewritePredicate(x, inputs))
-                        .collect(Collectors.toList()));
+                        .toList());
         newPredicates.getNonPartitionConjuncts().clear();
         newPredicates.getNonPartitionConjuncts().addAll(
                 predicates.getNonPartitionConjuncts().stream().map(x -> rewritePredicate(x, inputs))
-                        .collect(Collectors.toList()));
+                        .toList());
         newPredicates.getMinMaxConjuncts().clear();
         newPredicates.getMinMaxConjuncts().addAll(
                 predicates.getMinMaxConjuncts().stream().map(x -> rewritePredicate(x, inputs))
-                        .collect(Collectors.toList()));
+                        .toList());
 
         newPredicates.getMinMaxColumnRefMap().clear();
         for (Map.Entry<ColumnRefOperator, Column> kv : predicates.getMinMaxColumnRefMap().entrySet()) {
@@ -822,11 +850,10 @@ public class DecodeRewriter extends OptExpressionVisitor<OptExpression, ColumnRe
 
         @Override
         public Optional<ScalarOperator> preprocess(ScalarOperator scalarOperator) {
-            if (!(scalarOperator instanceof ColumnRefOperator)) {
+            if (!(scalarOperator instanceof ColumnRefOperator columnRef)) {
                 return Optional.empty();
             }
 
-            ColumnRefOperator columnRef = (ColumnRefOperator) scalarOperator;
             if (stringRefToDictRefMap.containsKey(columnRef) && supportColumns.containsAll(
                     getUsedColumns(columnRef, context))) {
                 return Optional.of(stringRefToDictRefMap.get(columnRef));
